<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="25dp"
		    tools:context=".MainActivity" >
	
		    <ImageButton
		        android:id="@+id/imageButton1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/my_location_compass"
		        android:src="@drawable/home_icono_ubicacion"
		        android:background="@drawable/home_btn_ubicacion"
		        android:layout_alignParentRight="true"/>
	
		    <AutoCompleteTextView
		        android:id="@+id/complete"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:layout_toLeftOf="@+id/imageButton1"
		        android:background="@drawable/home_input_buscar"
		        android:hint="@string/ciudad_barrio_h" >
	
		        <requestFocus />
		    </AutoCompleteTextView>
		    
		   </RelativeLayout>
    <RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    tools:context=".MainActivity" 
		    android:layout_marginTop="10dp">
		    
	        <Button
	            android:id="@+id/alq_btn"
	            android:background="@drawable/btn_alquiler"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/alquilar"
	            android:onClick="onOperationTypeClick"
	            />
	        <Button
	            android:id="@+id/cmp_btn" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="@string/comprar"      
	            android:layout_toRightOf="@id/alq_btn" 
	            android:onClick="onOperationTypeClick"    
	            />
	        <Button 
	            android:id="@+id/alq_tmp_btn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/alq_temp" 
	            android:layout_toRightOf="@id/cmp_btn"
	            android:layout_alignParentRight="true" 
	            android:onClick="onOperationTypeClick"          
	            />
	
	</RelativeLayout>
	<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:background="@drawable/row_color"
		    android:layout_marginTop="20dp"
		 >
		    <TextView 
		        android:id="@+id/rooms_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/rooms"
		        android:textColor="@color/black"
		        android:paddingLeft="10dp"
		        android:layout_centerVertical="true"
			/>
		    <TextView 
		        android:id="@+id/rooms_text"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_alignParentRight="true"
		        android:paddingRight="5dp"
		        android:text=""
		    />
		    <SeekBar
		        android:paddingLeft="6dp"
		        android:paddingRight="6dp"
		        android:thumbOffset="8dp"
		        android:id="@+id/rooms_seek_bar"
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="40dp"
		        android:progressDrawable="@drawable/seekbar_progress"
		        android:layout_toRightOf="@+id/rooms_label"
		        android:textColor="@color/row_item_font_color"
        		android:thumb="@drawable/opciones_btn_ambientes" />
		    
		</RelativeLayout>

</LinearLayout>